# lilly-stream

./: .gitignore  README.md  SETUP.md  config.yaml  pyproject.toml  secrets.yaml.example
deploy/: lilly-capture.service
docs/superpowers/plans/: 2026-07-16-lilly-stream.md  2026-07-18-stopmotion-phase1-pi-server.md
docs/superpowers/specs/: 2026-07-16-lilly-stream-design.md  2026-07-18-stopmotion-design.md
src/lilly_stream/: alerts.py  config.py  daystate.py  storage.py  suntimes.py
src/lilly_stream/capture/: camera.py  cli.py  daemon.py
src/lilly_stream/stopmotion/: cli.py  server.py
src/lilly_stream/timelapse/: build.py  cli.py  menu.py  selection.py
tests/: test_alerts.py  test_build.py  test_config.py  test_daemon.py  test_daystate.py  test_menu.py  test_selection.py  test_stopmotion_server.py  test_storage.py  test_suntimes.py
